# name: test_model_creation[cifar10_vit_study]
  tensor([[-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449],
          [-0.8126,  0.7047,  0.1040,  1.1272, -0.0269, -0.4608,  0.8306, -0.4877,
           -0.3762, -0.8449]], grad_fn=<AddmmBackward0>)
# ---
# name: test_model_creation[confidnet]
  tuple(
    tensor([[-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259]], grad_fn=<AddmmBackward0>),
    tensor([[0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357],
          [0.0357]], grad_fn=<AddmmBackward0>),
  )
# ---
# name: test_model_creation[deepgamblers]
  tensor([[-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749],
          [-0.3225,  0.8969, -1.0250, -0.2811,  0.3341,  0.2947, -0.3982, -0.3548,
            0.5488,  0.5526, -0.1749]], grad_fn=<AddmmBackward0>)
# ---
# name: test_model_creation[devries]
  tuple(
    tensor([[-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259]], grad_fn=<AddmmBackward0>),
    tensor([[-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296],
          [-0.4296]], grad_fn=<AddmmBackward0>),
  )
# ---
# name: test_model_training[cifar10_vit_study]
  tensor([[-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434],
          [-0.8136,  0.7066,  0.1053,  1.1278, -0.0272, -0.4608,  0.8297, -0.4879,
           -0.3771, -0.8434]], grad_fn=<AddmmBackward0>)
# ---
# name: test_model_training[confidnet]
  tensor([[-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259],
          [-0.2799,  0.9154, -1.0051, -0.2340,  0.3345,  0.3086, -0.3964, -0.3085,
            0.5543,  0.5259]], grad_fn=<AddmmBackward0>)
# ---
# name: test_model_training[deepgamblers]
  tensor([[-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563],
          [-0.9669,  0.7009, -0.1158,  0.0420, -0.1330, -0.2605, -0.9845,  0.1741,
            0.6423,  0.5489, -0.2563]], grad_fn=<AddmmBackward0>)
# ---
# name: test_model_training[devries]
  tensor([[-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840],
          [-0.9720,  0.7373, -0.2204,  0.3471, -0.2913, -0.4838, -0.2003, -0.3001,
            0.1605,  1.0840]], grad_fn=<AddmmBackward0>)
# ---
